[package]
name = "tbl"
version = "0.2.2"
edition = "2021"
authors = ["Somē Cho <itssomicho@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build_html = "2.4.0"
clap = { version = "4.4.12", features = ["derive"] }
csv = "1.3.0"
