[package]
name = "tbl"
version = "0.3.4"
edition = "2021"
license = "MIT"
keywords = ["csv","html"]
categories = ["command-line-utilities"]
authors = ["Somē Cho <itssomicho@gmail.com>"]
description="Convert CSV to HTML table"
repository="https://github.com/somecho/tbl"

[lib]
name = "tbl"
path = "src/lib.rs"

[[bin]]
name = "tbl"
path = "src/main.rs"

[dependencies]
build_html = "2.4.0"
clap = { version = "4.4.12", features = ["derive"] }
csv = "1.3.0"
