[package]
name = "csv-to-html"
version = "0.5.10"
edition = "2021"
license = "MIT"
keywords = ["csv","html"]
categories = ["command-line-utilities"]
authors = ["Somē Cho <itssomicho@gmail.com>"]
description="Convert CSV to HTML table"
repository="https://github.com/somecho/csv-to-html"

[lib]
name = "csv_to_html"
path = "src/lib.rs"

[[bin]]
name = "csv-to-html"
path = "src/main.rs"

[dependencies]
build_html = "2.4.0"
clap = { version = "4.4.12", features = ["derive"] }
csv = "1.3.0"
